--- a/CSS Zen Garden/style.css
+++ b/CSS Zen Garden/style.css
@@ -1,18 +1,16 @@
-/* Reset some default styles */
 body, h1, h2, p {
 	margin: 0;
 	padding: 0;
+	font-family: Garamond, serif;
 }
 
-/* Set a background color for the page */
 body {
 background-color: #f2f2f2;
 font-family: Arial, sans-serif;
 }
 
-/* Style the header */
 header {
-background-image: url('https://img.pikbest.com/background/20220119/plant-bamboo-green-fresh-banner_6231089.jpg!bw700');
+background-image: url('https://img.freepik.com/free-photo/smooth-stucco-wall_1194-7087.jpg');
 color: #fff;
 text-align: center;
 padding: 100px;
@@ -39,7 +37,14 @@ header h2 {
 	margin-left: 25%;
 }
 
-/* Style the main content */
+.summary, .preamble {
+	background-color: #f2f2f2;
+	padding: 20px;
+	margin: 20px;
+	border-radius: 5px;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
 .main {
 background-color: #fff;
 padding: 20px;
@@ -48,7 +53,6 @@ border-radius: 5px;
 box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-/* Style the sidebar */
 .sidebar {
 background-color: #f2f2f2;
 padding: 20px;
@@ -57,17 +61,18 @@ border-radius: 5px;
 box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-/* Style links */
 a {
-color: #0074d9;
-text-decoration: none;
+color: white;
+background-color: rgba(191, 179, 179, 0.94);
+border: 1px solid black;
+border-radius: 5px;
 }
 
 a:hover {
 text-decoration: underline;
+color: black;
 }
 
-/* Style the footer */
 footer {
 background-color: #333;
 color: #fff;
@@ -75,7 +80,6 @@ text-align: center;
 padding: 10px 0;
 }
 
-/* Style headings */
 h1 {
 font-size: 32px;
 }
@@ -84,7 +88,7 @@ h2 {
 font-size: 24px;
 }
 
-/* Add spacing between paragraphs */
 p {
 margin-bottom: 15px;
+font-size: 18px;
 }
