--- a/JS Project/style.css
+++ b/JS Project/style.css
@@ -83,10 +83,6 @@ button:hover
     cursor:pointer;
   }
 
-  #gameimage {
-    
-  }
-
   #animatedHeader {
     color: white;
     width: 350px;
@@ -100,19 +96,21 @@ button:hover
   }
 
   @keyframes winner {
-    0% {color: white; left: 18%; top: 15%;}
-    25% {color: red; left: 60%; top: 15%;}
-    50% {color: green; left: 60%; top: 48%;}
-    75% {color: purple; left: 18%; top: 48%;}
-    100% {color: white; left:18%; top: 15%;}
+    0% {color: white; left: 18%; top: 20%;}
+    25% {color: red; left: 60%; top: 20%;}
+    50% {color: green; left: 60%; top: 43%;}
+    75% {color: purple; left: 18%; top: 43%;}
+    100% {color: white; left:18%; top: 20%;}
+  }
+
+  #endContent {
+    position: absolute;
+    left: 45%;
+    top: 40%;
   }
 
   #endButton {
     width: 150px;
-    position: absolute;
-    left: 45%;
-    top: 40%;
-    margin: auto;
   }
 
   #imagecontainer {
